--- a/PlatformService/appsettings.json
+++ b/PlatformService/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "CommandService": "http://commands-clusterip-srv:80"
+  "CommandService": "http://commands-clusterip-srv:80",
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformadb;User Id=sa;Password=pa55w0rd@;"
+  }
 }
