fix(db): typo db name fixed

--- a/PlatformService/appsettings.json
+++ b/PlatformService/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "CommandService": "http://commands-clusterip-srv:80",
   "ConnectionStrings": {
-    "PlatformsConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformadb;User Id=sa;Password=pa55w0rd@;"
+    "PlatformsConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformdb;User Id=sa;Password=pa55w0rd@;"
   }
 }
