--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "CommandService": "http://localhost:6000"
+  "CommandService": "http://localhost:6000",
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=localhost,1433;Initial Catalog=platformdb;User Id=sa;Password=pa55w0rd@;"
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
